[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (1).png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (5).png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (3).png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (4).png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (2).png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (10).png" type="Texture" id=6]
[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (6).png" type="Texture" id=7]
[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (7).png" type="Texture" id=8]
[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (8).png" type="Texture" id=9]
[ext_resource path="res://assets/enemy/Magician Skeleton/Idle/Separate sp 1/idle (9).png" type="Texture" id=10]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (6).png" type="Texture" id=11]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (7).png" type="Texture" id=12]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (10).png" type="Texture" id=13]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (5).png" type="Texture" id=14]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (3).png" type="Texture" id=15]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (1).png" type="Texture" id=16]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (8).png" type="Texture" id=17]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (9).png" type="Texture" id=18]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (4).png" type="Texture" id=19]
[ext_resource path="res://assets/enemy/Magician Skeleton/Walk/Separate sp 1/walk 1 (2).png" type="Texture" id=20]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (6).png" type="Texture" id=21]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (7).png" type="Texture" id=22]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (1).png" type="Texture" id=23]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (5).png" type="Texture" id=24]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (2).png" type="Texture" id=25]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (8).png" type="Texture" id=26]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (9).png" type="Texture" id=27]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (10).png" type="Texture" id=28]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (3).png" type="Texture" id=29]
[ext_resource path="res://assets/enemy/Magician Skeleton/Attack 1/Separate sp/attack 1 (4).png" type="Texture" id=30]
[ext_resource path="res://src/Actor/Enemy/MagicianSkeleton/MagicianSkeleton.gd" type="Script" id=31]
[ext_resource path="res://assets/enemy/Magician Skeleton/Dead/Separate sp/ad_entity_000_Dead_005.png" type="Texture" id=32]
[ext_resource path="res://assets/enemy/Magician Skeleton/Dead/Separate sp/ad_entity_000_Dead_003.png" type="Texture" id=33]
[ext_resource path="res://assets/enemy/Magician Skeleton/Dead/Separate sp/ad_entity_000_Dead_004.png" type="Texture" id=34]
[ext_resource path="res://assets/enemy/Magician Skeleton/Dead/Separate sp/ad_entity_000_Dead_006.png" type="Texture" id=35]
[ext_resource path="res://assets/enemy/Magician Skeleton/Dead/Separate sp/ad_entity_000_Dead_002.png" type="Texture" id=36]
[ext_resource path="res://assets/enemy/Magician Skeleton/Dead/Separate sp/ad_entity_000_Dead_000.png" type="Texture" id=37]
[ext_resource path="res://assets/enemy/Magician Skeleton/Dead/Separate sp/ad_entity_000_Dead_001.png" type="Texture" id=38]
[ext_resource path="res://src/Actor/Enemy/MagicianSkeleton/Magic.gd" type="Script" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 36 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 35 ) ],
"loop": true,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "Attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 13 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 108.903, 170.703 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 656.187, 50.603 )

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.819608, 0.133333, 0.133333, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 12
script = ExtResource( 31 )

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -112.936, 2.05339 )
scale = Vector2( 1, 3.48 )
enabled = true
collision_mask = 8

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 112.014, 2.05339 )
scale = Vector2( 1, 3.48 )
enabled = true
collision_mask = 8

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="Magic" type="Position2D" parent="AnimatedSprite"]
position = Vector2( -143.093, -0.0789986 )
script = ExtResource( 39 )

[node name="Cooldown" type="Timer" parent="AnimatedSprite/Magic"]
process_mode = 0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AreaAttack" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
modulate = Color( 0.0117647, 0, 0.392157, 1 )
shape = SubResource( 3 )

[node name="TimerAnimation" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 4 )
[connection signal="body_entered" from="AreaAttack" to="." method="_on_AreaAttack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_AreaAttack_body_exited"]
